# mandelgrid

./: .gitignore  Makefile  c_mandel.i  imaging.py  interface.py  local_render.py  mandel.c  mandel.py  mandel.tar.bz2  mandelbrot_cool  mandelbrotbtrace-sdl-openmp-simd.cc  mandelbrotbtrace-sdl-openmp-simd.cc~  network.py  node.py  render_server.py  worker.py
cmandel/: CMakeLists.txt  Makefile  config.h.in  console.cpp  gdinterface.cpp  gdinterface.h  main.cpp  mandel.cpp  mandel.h  node.cpp  server.cpp  server.h
cmandel/qbrot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mandelbrotshower.cpp  mandelbrotshower.h
